[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/bg.png" type="Texture" id=1]
[ext_resource path="res://assets/alphabet.tres" type="TileSet" id=2]
[ext_resource path="res://femtonspel.gd" type="Script" id=3]
[ext_resource path="res://assets/jingles_SAX02.ogg" type="AudioStream" id=4]

[node name="Femtonspel" type="TileMap"]
position = Vector2( 88, 88 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 154, 154 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 1, 0, 2, 2, 0, 65536, 3, 0, 65537, 4, 0, 65538, 5, 0, 131072, 6, 0, 131073, 7, 0, 131074, 9, 0 )
script = ExtResource( 3 )

[node name="Bg" type="Sprite" parent="."]
position = Vector2( -88, -88 )
z_index = -1
texture = ExtResource( 1 )
centered = false

[node name="RestartTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="WinJingle" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="timeout" from="RestartTimer" to="." method="_on_RestartTimer_timeout"]
